fix: LaTeX overflow css

--- a/source/css/_card.styl
+++ b/source/css/_card.styl
@@ -1,3 +1,13 @@
+.content-box
+    background-color var(--bg-content-color)
+    max-width var(--content-width)
+    margin 0 auto
+    transition background-color .6s
+    padding var(--space)
+    border-radius var(--radius)
+    box-shadow 1px 1px 5px 0 $color-10,1px 1px 15px 0 $color-11
+    transition transform .3s,background-color .3s,box-shadow .6s
+
 .post-meta
     font-size .8em
     opacity .8
