--- a/source/css/_md.styl
+++ b/source/css/_md.styl
@@ -155,3 +155,5 @@ pre[class*=language-]
         border-radius var(--radius)
         white-space normal
 
+.katex-block
+    overflow: auto
